# Texo

./: .gitignore  README.md  demo.ipynb  main.py  pyproject.toml  pyrightconfig.json  readme.md
TechnoSelection/: got.ipynb  mixtex.ipynb  notes.md  text_ocr.ipynb  texteller.ipynb
config/: global.yaml  hydra.yaml  train.yaml  train_debug.yaml  train_distill.yaml  train_distill_transfer.yaml  train_slurm.yaml
config/data/: UniMER-1M.yaml
config/hydra/: default.yaml
config/model/: formulanet-S-distill-transfer.yaml  formulanet-S-distill.yaml  formulanet-S-distilled.yaml  formulanet-S.yaml  formulanet-T.yaml  formulanet.yaml  readme.md
config/trainer/: default.yaml
config/training/: default.yaml  finetune_distill.yaml  finetune_distill_transfer.yaml
data/: normalize.js  normalize.py  readme.md  test_normalize.py
data/dataset/: .gitignore  convert.py  make_hf_dataset.py  merge.py
data/dataset/simple/: train.txt
data/tokenizer/: common_tokens.txt  equiv_expressions.txt  equiv_formats.txt  normalize_ad_hocs.txt  normalize_envs.txt  normalize_macros.txt  notes.md  support_table.md  token_common.txt  tokenizer.json
data/tokenizer/katex/: ad_hoc.txt  equiv_envs.txt  equiv_expressions.txt  equiv_symbols.txt  layout.txt  scrape.ipynb  spacing.txt  support.txt  supported.md
data/tokenizer/normalizer/: ad_hocs.txt  macros.txt  symbols.txt
data/unimernet_tokenizer_distill/: old_to_new_id.json  tokenizer.json
model/: readme.md
outputs/: readme.md
scripts/: preprocessing.sh
scripts/js/: katex_parser.js  normalize.js  package.json
scripts/python/: build_tokenizer.py  convert_model.py  distill.py  distill_output.txt  export_onnx.py  hf_hub.py  ms_hub.py  normalize.py  run_experiment.py  stats.py  test_normalize.py  validate_onnx.py
src/: convert_model.py  datamodule.py  infer.py  task.py  test_distill.py  test_onnx.py  test_transfer.py  train.py
src/formula_net/: convert.py  decoder.py  encoder.py  hgnet.py  hgnet2.py  layers.py  utils.py
src/syntex/data/: dataset.py  datasets.py
src/syntex/formula_net/: config.py  convert.py  datamodule.py  dataset.py  decoder.py  encoder.py  formulanet.py  hgnet2.py  model.py  sampler.py  scores.py
src/syntex/model/: formulanet.py  hgnet2.py
src/syntex/processor/: __init__.py  config.py  image_processor.py  text_processor.py  tokenizer.py
src/syntex/processor/image_augment/: __init__.py  morphology.py  robustness.py  weather.py
src/syntex/utils/: config.py
src/texo/data/: dataset.py
src/texo/model/: formulanet.py
src/texo/utils/: scores.py
(+6 files in other folders)
